--- a/Final Project/StyleSheet/aboutus.css
+++ b/Final Project/StyleSheet/aboutus.css
@@ -46,10 +46,12 @@ h2 {
     object-fit: cover;
 }
 
+/*css for founding story*/
 .about-us-top-item1 {
     margin-right: 2em;
 }
 
+/*css for vision*/
 .about-us-top-item2 {
     margin-left: 2em;
 }
@@ -63,6 +65,7 @@ h2 {
     padding: 2em 5em;
 }
 
+/*make the image less prominent by reducing opacity*/
 .Discord-Guilded-background {
     width: 100%;
     height: 100%;
@@ -76,15 +79,11 @@ h2 {
     margin-right: auto;
 }
 
-.Discord-Guilded img {
-    object-fit: cover;
-    max-width: 100%;
-    max-height: 100%;
-}
 /*---------------------------------------------------------------*/
 /*Contact form---------------------------------------------------*/
 /*---------------------------------------------------------------*/
 
+/*styling the part where text is inserted as input*/
 input[type=text],
 select,
 textarea {
@@ -98,6 +97,7 @@ textarea {
     resize: vertical;
 }
 
+/*Submit button of our contact form*/
 input[type=submit] {
     background-color: var(--dark-grey);
     color: var(--white);
@@ -111,6 +111,7 @@ input[type=submit]:hover {
     background-color: var(--light-grey);
 }
 
+/*contact form container*/
 .contact-form {
     border-radius: 25px;
     width: 500px;
@@ -150,6 +151,7 @@ input[type=submit]:hover {
     }
 
     .about-us-top-item2 {
+        margin-left: 0;
         grid-row: 3
     }
 
