--- a/Final Project/StyleSheet/report.css
+++ b/Final Project/StyleSheet/report.css
@@ -20,6 +20,21 @@ p {
     margin: auto;
 }
 
+figcaption {
+    color: var(--light-grey);
+    padding: 2px;
+    font-size: 0.8em;
+    text-align: center;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    overflow:hidden;
+}
+
+
 @media screen and (min-width: 1011px) {
 
     /*--------------------------------------------------------------------*/
@@ -30,3 +45,4 @@ p {
     .nav-bar.sticky .company-name-JSON {
         display: none;
     }
+}
