--- a/Final Project/StyleSheet/aboutus.css
+++ b/Final Project/StyleSheet/aboutus.css
@@ -66,9 +66,11 @@ h2 {
 }
 
 /*make the image less prominent by reducing opacity*/
-.Discord-Guilded-background {
-    width: 100%;
-    height: 100%;
+.Discord-Guilded img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: auto;
     object-fit: cover;
     opacity: 0.7;
 }
