--- a/Final Project/StyleSheet/index.css
+++ b/Final Project/StyleSheet/index.css
@@ -2,7 +2,7 @@
 /*'Home' page: Desktop-------------------------------------------*/
 /*---------------------------------------------------------------*/
 
-@media screen and (min-width: 1011px) {
+@media screen and (min-width: 1080px) {
 
     #main-page-title {
         font-size: 1.6em;
@@ -99,7 +99,7 @@
     /*Style text to appear besides images--------------------------------------------*/
     /*-------------------------------------------------------------------------------*/
 
-    /*Ensure that image does not overflow out of its designated space*/
+    /*container for text to appear besides image*/
     .image-side-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -109,14 +109,14 @@
         overflow: hidden;
     }
 
-    /*Smooth the zoom in effect animation*/
+    /*prevent image from overflowing outside of it's supposed space*/
     .image-side-container img {
         width: 100%;
         height: 100%;
-        transition: all 0.4s ease-out;
+        object-fit: contain;
     }
 
-    /*Emphasize the given image by scaling up the image to mirror a "zoom in" effect*/
+    /*Give image emphasis on hover*/
     .image-side-container img:hover {
         transform: scale(1.02);
     }
@@ -125,7 +125,7 @@
 /*---------------------------------------------------------------*/
 /*'Home' page: Mobile--------------------------------------------*/
 /*---------------------------------------------------------------*/
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 700px) {
     
     /*adjusting the position of title for mobile devices*/
     #main-page-title {
@@ -202,7 +202,7 @@
     /*Style text to appear besides images--------------------------------------------*/
     /*-------------------------------------------------------------------------------*/
 
-    /*Ensure that image does not overflow out of its designated space*/
+    /*modify container to have test below image on mobile*/
     .image-side-container {
         display: grid;
         grid-template-columns: 1fr;
@@ -212,14 +212,13 @@
         overflow: hidden;
     }
 
-    /*Smooth the zoom in effect animation*/
     .image-side-container img {
         width: 100%;
         height: 100%;
         transition: all 0.4s ease-out;
     }
 
-    /*Emphasize the given image by scaling up the image to mirror a "zoom in" effect*/
+    /*Give image emphasis on hover*/
     .image-side-container img:hover {
         transform: scale(1.02);
     }
@@ -229,7 +228,7 @@
 /*'Home' page: Tablet------------------------*/
 /*-------------------------------------------*/
 
-@media screen and (min-width: 570px) and (max-width: 1010px) {
+@media screen and (min-width: 700px) and (max-width: 1080px) {
 
     #main-page-title {
         font-size: 1.6em;
@@ -312,7 +311,7 @@
     /*Style text to appear besides images--------------------------------------------*/
     /*-------------------------------------------------------------------------------*/
 
-    /*Ensure that image does not overflow out of its designated space*/
+    /*modify container to have text below image for smaller screen*/
     .image-side-container {
         display: grid;
         grid-template-columns: 1fr;
@@ -322,14 +321,13 @@
         overflow: hidden;
     }
 
-    /*Smooth the zoom in effect animation*/
-    .image-side-container img {
+     .image-side-container img {
         width: 100%;
         height: 100%;
         transition: all 0.4s ease-out;
     }
 
-    /*Emphasize the given image by scaling up the image to mirror a "zoom in" effect*/
+    /*Give image emphasis on hover*/
     .image-side-container img:hover {
         transform: scale(1.02);
     }
