--- a/Final Project/StyleSheet/main.css
+++ b/Final Project/StyleSheet/main.css
@@ -4,7 +4,7 @@
 /*Set up custom colour and text style properties--------*/
 /*------------------------------------------------------*/
 
-/*Colors and font styles used throughout all five pages*/
+/*Colours and font styles for all pages*/
 :root {
     --background-light: #bdc0c9;
     --background-medium: #7b76ad;
@@ -31,24 +31,21 @@
     --lightest-grey: rgb(240, 240, 240);
     --almost-white: rgb(248, 250, 255);
     --white: rgb(255, 255, 255);
-    --google-orange: #f1503b;
     --title-red: rgb(204, 34, 34);
-    --youtube-red: #c90000;
     --light-red: rgb(238, 39, 39);
     --red: rgb(121, 45, 45);
     --dropdown-selected: rgba(0, 0, 0, .2);
-    /*Font used for company logo, page headers, and section headers with sans-serif fallback fonts*/
+    /*Font used for company logo, page headers, and section headers with sans-serif fonts*/
     --main-header: 'Josefin Sans', 'Futura', sans-serif;
-    /*Font used for news article content with serif fallback fonts*/
+    /*Font used for news article content with serif fonts*/
     --main-text: 'Lora', 'Garamond', serif;
 }
 
 /*---------------------------------------------------------------------------------------------*/
-/*Set up color scheme for accessibility features: low contrast mode and grayscale mode---------*/
+/*Set up colour scheme for lower contrast mode and grayscale mode--------------------------------*/
 /*---------------------------------------------------------------------------------------------*/
 
-/*Adjust color scheme of website to low contrast color scheme that can be toggled by the button in the top-right
-corner*/
+/*Colour scheme for lower contrast*/
 .low-contrast-mode {
     --background-light: #c0c2c7;
     --background-medium: #69677a;
@@ -76,16 +73,13 @@ corner*/
     --lightest-grey: rgb(221, 221, 221);
     --almost-white: rgb(227, 229, 233);
     --white: rgb(233, 230, 230);
-    --google-orange: #be4b3c;
     --title-red: rgb(119, 7, 7);
-    --youtube-red: #8d0000;
     --light-red: rgb(139, 34, 34);
     --red: rgb(80, 41, 41);
     --dropdown-selected: rgba(0, 0, 0, 0.3);
 }
 
-/*Grayscale mode in which color palette is composed of shades of grey
-    This mode can be toggled from the accessibility dropdown menu in the top-left corner*/
+/*Colour Scheme for grayscale mode*/
 .grayscale {
     --background-light: #dfdfdf;
     --background-medium: #969696;
@@ -110,52 +104,47 @@ corner*/
     --lighter-grey: rgb(218, 218, 218);
     --almost-white: rgb(241, 241, 241);
     --white: rgb(255, 255, 255);
-    --google-orange: #c2c2c2;
     --title-red: rgb(121, 121, 121);
-    --youtube-red: #b3b3b3;
     --light-red: rgb(145, 145, 145);
     --red: rgb(77, 77, 77);
     --dropdown-selected: rgba(0, 0, 0, 0.3);
 }
 
-/*Apply a grayscale filter on all images when grayscale mode is toggled from the accessibility dropdown menu*/
+/*Apply grayscale filter on all images when grayscale mode is selected*/
 .gray {
     filter: grayscale(1);
 }
 
-/*Improved legibility mode toggled by the first sub-menu item of the accessible icon dropdown menu*/
+/*Change font with font legibility option*/
 .readability-mode {
-    /*All fonts changed to a legible font
-    Fallback font ensures that the font will render*/
+    /*All fonts changed to a legible font*/
     --main-header: 'Arial', sans-serif;
     --main-text: 'Arial', sans-serif;
 }
 
 /*-------------------------------------------------------------------------------*/
-/*Style images to have an acceesible 'Zoom in' effect when hovered---------------*/
+/*Style images to have 'Zoom in' effect on mouse hover for emphasis--------------*/
 /*-------------------------------------------------------------------------------*/
 
-/*Ensure that image does not overflow out of its designated space*/
+/*Prevent scaled image from overflowing from its supposed space*/
 .image-main-container {
     overflow: hidden;
-    /*Text overlay will be positioned in relation to the background image*/
-    position: relative;
 }
 
-/*Smooth the zoom in effect animation*/
+/*Smoothen effect animation*/
 .image-main-container img {
     width: 100%;
     height: 100%;
     transition: all 0.4s ease-out;
 }
 
-/*Emphasize the given image by scaling up the image to mirror a "zoom in" effect*/
+/*Scale image on hover to give emphasis*/
 .image-main-container img:hover {
-    transform: scale(1.02);
+    transform: scale(1.03);
 }
 
 /*---------------------------------------------------------------*/
-/*Common CSS that applies to all pages---------------------------*/
+/*Common CSS functions that applies to all pages-----------------*/
 /*---------------------------------------------------------------*/
 
 /*Ensure that content, padding, and border fits within a given width or height*/
@@ -166,44 +155,24 @@ corner*/
     padding: 0;
 }
 
-/*Set uniform background color for each page*/
+/*Set standardized background colour on every page*/
 body {
     background-color: var(--main-background);
 }
 
-/*Prevent any main content from having text or element collisions on devices with small screen dimensions*/
+/*Prevent main content from having collisions on devices with small screen*/
 main {
     min-width: 26.1875em;
 }
 
-/*Style common headers to create a uniform font style*/
+/*Style the headers to standardized font style*/
 h1,
 h2,
 h3 {
     font-family: var(--main-header);
 }
 
-/*Center the text or element*/
-.center {
-    /*Used on decorative elements to distinguish two sections from one another*/
-    justify-content: center;
-    /*Used to center section headers*/
-    text-align: center;
-}
 
-/*Create uniform style for section headers*/
-.section-header {
-    font-size: 1.2em;
-    margin: .9em 0.8em 0em 0.8em;
-    margin-top: 3.2em;
-}
-
-/*Create uniform style for secondary headers or subheaders*/
-.secondary-section-header {
-    font-size: 1em;
-    margin-top: 1.8em;
-    margin-bottom: 1em;
-}
 
 /*When an accessibility feature is selected from the dropdown menu, a selected indicator will appear*/
 .changeOpacity {
@@ -216,7 +185,7 @@ h3 {
 /*Adjust the different headers to improve readability-----------*/
 /*--------------------------------------------------------------*/
 
-/*Give sufficient space around main page header*/
+/*make some spacing below main page header*/
 h1 {
     margin-bottom: .2em;
 }
@@ -226,7 +195,7 @@ h1,
 h2,
 h3,
 h4 {
-    /*This spacing is important on mobile devices when text may wrap to multiple lines*/
+    /*This spacing is crucial on mobile devices for readability*/
     line-height: 1.8em;
 }
 
@@ -295,7 +264,6 @@ footer {
     left: 0;
     bottom: -0.2em;
     background-color: var(--light-medium-blue);
-    transition: 0.4s ease-in-out;
 }
 
 /*Make the decorative blue link grow and shrink when hovered to appear interactive*/
@@ -372,7 +340,7 @@ toggle button)*/
 }
 
 /*---------------------------------------------------------------*/
-/*Main navigation bar with five navigational links---------------*/
+/*Main navigation bar with six navigational links---------------*/
 /*---------------------------------------------------------------*/
 
 /*Add a faint shadow to separate the navigational area from the main content*/
@@ -393,7 +361,7 @@ button {
     font-family: 'Josefin Sans', sans-serif;
 }
 
-/*Allow users to access navigation when page is scrolled down*/
+/*Allow easy access to navigation when page is scrolled down*/
 .nav-bar {
     /*Navigation will remain fixed at the top of the screen*/
     position: fixed;
@@ -518,7 +486,7 @@ button {
     display: inline;
 }
 
-@media screen and (max-width: 1010px) {
+@media screen and (max-width: 1080px) {
 
     /*Prevent the company logo from being displayed twice on mobile and tablet devices*/
     .company-logo-scroll-active {
@@ -554,39 +522,36 @@ button {
 }
 
 /*------------------------------------------------------------------------------------------------------------*/
-/*'Toggle Contrast' button that is high contrast by default. Can be toggled to low contrast and vice versa.---*/
+/*'Toggle Contrast' button to switch between higher and lower contrast, which is high on default--------------*/
 /*------------------------------------------------------------------------------------------------------------*/
 
-/*Establish button style that is used throughout each web page*/
+/*Set button style for every web page*/
 button {
     color: var(--almost-white);
-    padding: 1.3em 1.3em;
-    border-radius: 0.2em;
+    padding: 1.4em 1.4em;
+    border-radius: 0.3em;
     background-color: var(--dark-grey);
     border: 0;
     text-align: center;
-    cursor: pointer;
-    text-decoration: none;
 }
 
-/*Vertically align the 'Toggle Contrast' button with the navigation links*/
+/*Align 'Toggle Contrast' button on the right side of navigation links*/
 .low-contrast-toggle {
     bottom: 1.92em;
     position: absolute;
     right: 1.2em;
 }
 
-/*Indicate the 'Toggle Contrast' button as an interactive element by adding a selected indicator when hovered*/
+/*Change the colour of "Toggle Contrast" button on hover to indicate it as interactive element*/
 button:hover {
     background-color: var(--medium-grey);
-    transition: ease-in-out .1s;
 }
 
 /*--------------------------------------------------------------------------------------------------------------*/
-/*Fixed accessibility menu (wheelchair icon): offers font readability, link underlining, and grayscale mode-----*/
+/*Fix the position of "wheelchair" button accessibility menu----------------------------------------------------*/
 /*--------------------------------------------------------------------------------------------------------------*/
 
-/*Prevent accessibility menu from obstructing main viewport content by fixing it to the left side of the screen*/
+/*Fix the position of drop down menu to the left side of the screen to prevent it from blocking main content*/
 .accessibility-menu {
     position: fixed;
     /*Align with the bottom of the sticky navigation bar for fluidity*/
@@ -594,44 +559,42 @@ button:hover {
     left: -.03em;
     /*Make menu visible and accessible at all times*/
     z-index: 99;
-    /*Transparent background would result in collisions with elements (lower z-index) that are beneath the menu*/
+    /*Unfortunately transparent background would collide with elements with lower z-index*/
     background: var(--dark-grey);
 }
 
-/*Indicate the wheelchair icon as interactive by adding an indicator when accessibility button is hovered*/
+/*Change the colour of "Wheelchair" button on hover to indicate it as interactive element*/
 .accessibility-menu .dropdown-menu .accessibility-toggle:hover {
     background-color: var(--medium-grey);
 }
 
-/*Make accessibility menu uniform by applying the same background color indicator to dropdown menu items as the
-main wheelchair button*/
+/*Standardize accessibility options with same background colour*/
 .accessibility-menu .dropdown-menu .sub-menu a:hover {
     background: var(--medium-grey);
 }
 
-/*Provide positional frame of reference for the tooltip display*/
+/*Set the position the tooltip display*/
 .accessibility-tooltip {
     position: relative;
 }
 
-/*Create a high contrast, legible tooltip without the left pointing arrow*/
+/*Make the tool tip legible with without cursor arrow*/
 .accessibility-tooltip::before {
     position: absolute;
     display: none;
     border-radius: .16em;
-    /*Accessibility tooltip display information is based on the content within the title attribute*/
+    /*Let accesiblity tooltip display content based on it's label*/
     content: attr(title);
     color: var(--white);
     padding: 1em;
-    /*Ensure that the tooltip is displayed on one line so each tooltip has the same vertical height*/
     width: 8.3em;
     background-color: var(--dark-black);
-    /*Ensure that the tooltip is not obscured by other elements*/
+    /*Prevent tooltip from colliding with other elements*/
     z-index: 99;
     font-size: 0.81em;
 }
 
-/*Small arrow on the left side of the accessibility tooltip that points towards the accessibility icon it describes*/
+/*Small arrow on accessibility tool tip pointing accessibility icon*/
 .accessibility-tooltip::after {
     content: "";
     position: absolute;
@@ -639,25 +602,25 @@ main wheelchair button*/
     height: 0;
     display: none;
     color: var(--dark-black);
-    /*Ensure that the arrow visibility is not obscured*/
+    /*make sure that the arrow is visible*/
     z-index: 99;
     border: .41em solid transparent;
 }
 
-/*Make the tooltip visible*/
+/*Make the tool tip visible*/
 .accessibility-tooltip:hover::before,
 .accessibility-tooltip:hover::after {
     display: block;
 }
 
-/*Position the tooltip to the right side of the accessibility icon it corresponds to*/
+/*Position the tooltips on the right side of each the accessibility icon*/
 .accessibility-tooltip.tooltip-right:before {
     transform: translateY(-50%);
     top: 50%;
     left: calc(100% + 5px);
 }
 
-/*Position the left pointing arrow adjacent to and to the left of the main tooltip body*/
+/*Set the position of the arrow described above*/
 .accessibility-tooltip.tooltip-right:after {
     transform: translateY(-50%);
     top: 50%;
@@ -666,61 +629,59 @@ main wheelchair button*/
     border-right-color: var(--dark-black);
 }
 
-/*Increase visibility of the dropdown menu icons by contrasting them with the dark background*/
+/*Increase visibility of the drop down menu icons with contrasting dark background*/
 .accessibility-menu i {
     color: var(--almost-white);
 }
 
-/*Remove bullet points on menu items for a cleaner interface*/
+/*Hide bullet points on menu items*/
 .accessibility-menu .dropdown-menu {
     list-style: none;
 }
 
-/*Dropdown menu appears when icon is clicked by the user*/
+/*Drop down menu appears on click*/
 .accessibility-menu .dropdown-menu {
     cursor: pointer;
-    /*Dropdown menu items positioned in relation to the menu*/
+    /*Set drop down menu items position in relation to the menu*/
     position: relative;
 }
 
-/*Create distinguishable space for each icon item in the dropdown menu*/
+/*Make space for each dropd own menu items*/
 .accessibility-menu .dropdown-menu a {
     display: block;
     text-decoration: none;
 }
 
-/*Make dropdown menu icons appear slightly smaller than the main wheelchair icon*/
+/*Make drop down menu icons slightly smaller than the main wheel chair icon*/
 .accessibility-menu .dropdown-menu .sub-menu a i {
     font-size: 1em;
     padding: 1em 0 1em .85em;
 }
 
-/*Re-centre the 'Underline Link' icon since it is positioned further to the right by default and misaligned*/
+/*Place 'Underline Link' icon to the centre as it is positioned to the right by default and misaligned*/
 .accessibility-menu .dropdown-menu .sub-menu div:nth-child(2) {
-    /*Align the 'Underline Link' icon with the other icons*/
     margin-left: -.2em;
 }
 
-/*Provide space around wheelchair icon to reduce clutter*/
+/*Pad the wheel chair icon to prevent clutter*/
 .accessibility-menu .dropdown-menu .accessibility-toggle i {
     font-size: 1.6em;
     padding: .4em .2em;
 }
 
-/*Dropdown menu is hidden by default until it is toggled by the user*/
+/*Hide the drop down menu when not clicked*/
 .accessibility-menu .dropdown-menu .sub-menu {
     background: var(--dark-grey);
     display: none;
 }
 
-/*Provide space around dropdown menu icons to reduce clutter*/
+/*create some space around the drop down menu to prevent clutter*/
 .accessibility-menu .dropdown-menu i {
     margin: .3em .41em;
 }
 
-/*Align the accessibility button to be flush with the bottom of the fixed navigation menu on tablet and mobile
-    devices*/
-@media screen and (max-width: 1010px) {
+/*Adjust the position of the drop down menu for tablet and mobile devices*/
+@media screen and (max-width: 1080px) {
     .accessibility-menu {
         top: 6.2em !important;
     }
@@ -756,7 +717,7 @@ main wheelchair button*/
 /*Mobile features common to all pages------------------------------*/
 /*-----------------------------------------------------------------*/
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 700px) {
 
     /*---------------------------------------------------------------*/
     /*Sticky accessibility button tablet layout----------------------*/
@@ -828,7 +789,7 @@ main wheelchair button*/
     /*----------------------------------------------------------------------------------------------------*/
 
     /*Increase visibility of the hamburger button by making it bright to contrast the fixed navigation bar dark
-    background color*/
+    background colour*/
     .nav-bar.sticky .toggle-button .bar {
         background-color: var(--almost-white);
     }
@@ -847,7 +808,7 @@ main wheelchair button*/
 /*Tablet features common to all pages----------------------------*/
 /*---------------------------------------------------------------*/
 
-@media screen and (min-width: 570px) and (max-width: 1010px) {
+@media screen and (min-width: 700px) and (max-width: 1080px) {
 
     /*---------------------------------------------------------------*/
     /*Sticky accessibility button tablet layout----------------------*/
@@ -919,7 +880,7 @@ main wheelchair button*/
     /*----------------------------------------------------------------------------------------------------*/
 
     /*Increase visibility of the hamburger button by making it bright to contrast the fixed navigation bar dark
-    background color*/
+    background colour*/
     .nav-bar.sticky .toggle-button .bar {
         background-color: var(--almost-white);
     }
