--- a/Final Project/StyleSheet/paldea.css
+++ b/Final Project/StyleSheet/paldea.css
@@ -20,21 +20,21 @@
     position: absolute;
     left: 50%;
     bottom: 0;
-    transform: translateX(-50%) rotate(45deg);
+    transform: translateX(-50%) rotate(55deg);
     width: 20px;
     height: 20px;
-    z-index: 2;
+    z-index: 1;
     background: var(--background-dark);
 }
 
 .timeline ul li div {
     position: relative;
     bottom: 0;
-    width: 400px;
-    padding: 20px;
+    width: 401px;
+    padding: 19px;
     background: var(--almost-white);
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
+    border-radius: 7px;
     display: flex;
     align-items: center;
 }
@@ -43,36 +43,38 @@
     position: absolute;
     background: var(--light-blue);
     width: fit-content;
-    height: 30px;
+    padding: 5px;
+    height: 31px;
     top: -15px;
-    border-radius: 5px;
+    border-radius: 7px;
     display: flex;
     justify-content: center;
     align-items: center;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
 }
 
+/*Split the timeline element to left and right*/
 
 .timeline ul li:nth-of-type(odd)>div {
-    left: 45px;
+    left: -439px;
 }
 
 .timeline ul li:nth-of-type(even)>div {
-    left: -439px;
+    left: 45px;
 }
 
 .timeline ul li div {
     visibility: hidden;
     opacity: 0;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.6s ease-in-out;
 }
 
 .timeline ul li:nth-of-type(odd) div {
-    transform: translate3d(100px, -10px, 0) rotate(10deg);
+    transform: translate3d(101px, -11px, 0) rotate(15deg);
 }
 
 .timeline ul li:nth-of-type(even) div {
-    transform: translate3d(-100px, -10px, 0) rotate(10deg);
+    transform: translate3d(-99px, -11px, 0) rotate(15deg);
 }
 
 .timeline ul li.in-view div {
@@ -86,7 +88,7 @@
 /*---------------------------------------------------------------*/
 
 
-@media screen and (min-width: 1011px) {
+@media screen and (min-width: 1080px) {
 
     /*--------------------------------------------------------------------*/
     /*Sticky navigation bar on desktop------------------------------------*/
@@ -158,7 +160,7 @@
 /*---------------------------------------------------------------*/
 /*'About Paldea': Mobile-----------------------------------------*/
 /*---------------------------------------------------------------*/
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 700px) {
 
     /*---------------------------------------------------------------*/
     /*main grid------------------------------------------------------*/
@@ -233,7 +235,7 @@
 /*'About Paldea': Tablet---------------------*/
 /*-------------------------------------------*/
 
-@media screen and (min-width: 720px) and (max-width: 1010px) {
+@media screen and (min-width: 700px) and (max-width: 1080px) {
 
     /*---------------------------------------------------------------*/
     /*main grid------------------------------------------------------*/
@@ -299,10 +301,10 @@
 
     .timeline ul li div div {
         width: 70%;
-        margin: 10px;
+        margin: 8px;
     }
 
-    .timeline ul li:nth-of-type(even)>div {
+    .timeline ul li:nth-of-type(odd)>div {
         left: -289px;
     }
 
